objects/Default_Assignment_Weighting__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Default Assignment Weighting</relationshipLabel>
        <relationshipName>Default_Assignment_Weighting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Default_Weighting__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Default Weighting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Of_Section_Grade__c</fullName>
        <description>The weighted percentage of this assignment type that will be used for the section grade - provided this functionality is selected on the course</description>
        <inlineHelpText>The weighted percentage of this assignment type that will be used for the section grade - provided this functionality is selected on the course</inlineHelpText>
        <label>Percent Of Section Grade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Type</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Default Assignment Weighting</relationshipLabel>
        <relationshipName>Default_Assignment_Weighting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for section-specific weightings</description>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Default Assignment Weighting</relationshipLabel>
        <relationshipName>Default_Assignment_Weighting</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Default Assignment Weighting</label>
    <nameField>
        <displayFormat>DEFAW-{000}</displayFormat>
        <label>Default Assignment Weighting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Assignment Weighting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>